--- a/Beginner_2/6.7 Built-in Standard Data Types - Dictionaries.ipynb
+++ b/Beginner_2/6.7 Built-in Standard Data Types - Dictionaries.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# 6.7 Dictionaries\n",
     "\n",
-    "> Dictionaries are Python's built-in associative data type. A dictionary is made of key-value pairs where each key corresponds to a value. Like sets, dictionaries are unordered. A few notes about keys and values: * The key must be immutable and hashable while the value can be of any type. Common examples of keys are tuples, strings and numbers. * A single dictionary can contain keys of varying types and values of varying types."
+    "> Dictionaries are Python's built-in associative data type. A dictionary is made of <b>key-value pairs</b> where each key corresponds to a value. Like sets, <b>dictionaries are unordered</b>. \n",
+    "\n",
+    "> A few notes about keys and values: * The key must be immutable and hashable while the value can be of any type. Common examples of keys are tuples, strings and numbers. * A single dictionary can contain keys of varying types and values of varying types.\n",
+    "\n",
+    "Each key is separated from its value by a colon ( `:` ), the items are separated by commas, and the whole thing is enclosed in curly braces:"
    ]
   },
   {
@@ -16,7 +20,443 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "my_dictionary =  {'key1' : 1, 'key2' : 2, 'key3' : 3}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The example above is a dictionary called <b>`my_dictionary`</b> with three key-value pairs:\n",
+    "\n",
+    "- <b>`'key1'`</b> points to the value <b>`1`</b>, \n",
+    "- <b>`'key2'`</b> points to the value <b>`2`</b>, and\n",
+    "- <b>`'key3'`</b> points to the value <b>`3`</b>\n",
+    "\n",
+    "#### Facts about Dictionaries:\n",
+    "- (a) <b>Keys</b> are <b>unique</b> within a dictionary while <b>values may not be</b>. \n",
+    "- (b) The <b>values</b> of a dictionary </b>can be of any type</b>;\n",
+    "- (c) The <b>keys</b> must be of an <b>immutable data type</b> such as strings, numbers, or tuples. \n",
+    "\n",
+    "For example:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_dictionary = {\n",
+    "    'key1': 'value1',\n",
+    "     123: 456,\n",
+    "    ('key3', 'key4'): 'value3'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- (d) No duplicate key is allowed. When duplicate keys encountered during assignment, the last assignment wins.\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run the code to see the result\n",
+    "my_dictionary = {\n",
+    "    'Name':'John',\n",
+    "    'Age':35,\n",
+    "    'Name': 'Bob'\n",
+    "}\n",
+    "\n",
+    "print(my_dictionary['Name'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An empty dictionary without any items is written with just two curly braces, like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "my_dictionary = {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or we may also use <b>`dict()`</b> to create a new empty dictionary. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionaries are useful for things like phone books (pairing a name with a phone number), login pages like pairing a username with a password, and lots more."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.7.1 Accessing Values in a Dictionary\n",
+    "\n",
+    "To access dictionary elements, you can use the familiar square brackets along with the key to obtain its value. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
+    "\n",
+    "print(my_dictionary['Name'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.7.2 Adding New Entries\n",
+    "\n",
+    "Dictionaries are \"mutable\" which means they can be changed after they are created. We can add new key/value pairs to the dictionary. \n",
+    "\n",
+    "Here's the syntax:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dict_name[new_key] = new_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's try to add a new key-value pair to our existing dictionary:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
+    "\n",
+    "my_dictionary['Gender']='Male'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's another example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# A dictionary of food and its prices\n",
+    "food = { \n",
+    "    'Pizza': 50,\n",
+    "    'Spaghetti': 150,\n",
+    "    'Ramen': 180,\n",
+    "    'Garlic Bread': 40,\n",
+    "    'Carbonara': 150\n",
+    "}\n",
+    "\n",
+    "# Add more food\n",
+    "food['Burger'] = 120\n",
+    "food['Ham and Cheese sandwich'] = 80\n",
+    "\n",
+    "# print some food\n",
+    "print(\"Pizza costs\", food['Pizza'])\n",
+    "print(\"Ramen costs\", food['Ramen'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.7.3 Changing the Entries\n",
+    "\n",
+    "A new value can be associated with a key by assigning a value to the key.\n",
+    "\n",
+    "Syntax:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dict_name[key] = new_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# A dictionary of countries and its abbreviation\n",
+    "country = {\n",
+    "    'Philippines': 'PH',\n",
+    "    'Japan': 'JP',\n",
+    "    'Korea': 'KR',\n",
+    "    'United States of America': 'USA',\n",
+    "    'France': 'IT'\n",
+    "}\n",
+    "\n",
+    "# Change the value of 'France' from 'IT' to 'FR'\n",
+    "country['France'] = 'FR'\n",
+    "\n",
+    "# Print the value of 'France'\n",
+    "print(country['France'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.7.4 Deleting Entries\n",
+    "\n",
+    "Items can be removed from a dictionary with the <b>`del`</b> command. \n",
+    "\n",
+    "Here's the syntax:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "del dict_name[key_name]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The example above will remove the key <b>`key_name`</b> AND it's associated value from the dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "food = { \n",
+    "    'Pizza': 50,\n",
+    "    'Spaghetti': 150,\n",
+    "    'Ramen': 180,\n",
+    "    'Garlic Bread': 40,\n",
+    "    'Carbonara': 150\n",
+    "}\n",
+    "\n",
+    "# Delete the key 'Garlic Bread' along with its value which is 40\n",
+    "del food['Garlic Bread']\n",
+    "\n",
+    "# Print 'food' dictionary\n",
+    "print(food)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.7.5 Other methods\n",
+    "\n",
+    "### a. len( )\n",
+    "The length of a dictionary is the number of key-value pairs it has. Each pair counts onlt <b>once</b>, even if the value is a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run the code to see how len() works\n",
+    "\n",
+    "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
+    "\n",
+    "print(len(my_dictionary))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b. str( )\n",
+    "Produces a printable string representation of a dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run the code to see how str() works\n",
+    "\n",
+    "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
+    "\n",
+    "print(str(my_dictionary)) # prints the equivalent string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c. dict.keys()\n",
+    "Returns list of the dictonary's keys."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
+    "\n",
+    "print(dict.keys(my_dictionary))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### d. dict.values()\n",
+    "Returns a list of the dictionary's values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
+    "\n",
+    "print(dict.values(my_dictionary))"
+   ]
   }
  ],
  "metadata": {
