--- a/Intermediate_3/18. ORMs.ipynb
+++ b/Intermediate_3/18. ORMs.ipynb
@@ -35,7 +35,7 @@
     "- You have to learn it, and ORM libraries are not lightweight tools;\n",
     "- You have to set it up. Same problem.\n",
     "- Performance is OK for usual queries, but a SQL master will always do better with his own SQL for big projects.\n",
-    "- It abstracts the DB. While it's OK if you know what's happening behind the scene, it's a trap for new programmers that can write very greedy statements, like a heavy hit in a <b>`for`</b> loop."
+    "- It abstracts the DB. While it's OK if you know what's happening behind the scene, it's a trap for new programmers that can write very greedy statements, like a heavy hit in a __`for`__ loop."
    ]
   },
   {
@@ -52,21 +52,19 @@
     "\n",
     "> The main goal of SQLAlchemy is to change the way you think about databases and SQL!\n",
     "\n",
-    "\n",
     "### We'll cover how to:\n",
     "\n",
-    "- Create a connection to a database\n",
-    "- Declare a mapping\n",
-    "- Declare a schema\n",
-    "- Create an instance\n",
-    "- Create a database session\n",
-    "- Add and update objects in the session\n",
-    "- Rollback changes\n",
-    "- Querying the session\n",
+    "- Connect a Database\n",
+    "- Declare a Mapping\n",
+    "- Create a Schema\n",
+    "- Create a Session\n",
+    "- Create, Add and Update Objects in a Session\n",
+    "- Rollback Changes\n",
+    "- Query the Session\n",
     "\n",
     "#### Version Check\n",
     "\n",
-    "We should be on at least __version 1.1__ of SQLAlchemy:"
+    "This code works on __version 1.1__ of SQLAlchemy:"
    ]
   },
   {
@@ -86,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating a connection to a database\n",
+    "### Connecting a Database\n",
     "\n",
     "For this tutorial we will use an in-memory-only SQLite database. To connect we use <b>`create_engine()`</b>:"
    ]
@@ -111,18 +109,20 @@
     "__`echo`__\n",
     "\n",
     "- This is shortcut to setting up SQLAlchemy logging, which is accomplished via Python’s standard __`logging`__ module. \n",
-    "- If this is enabled (set to __`True`__), we’ll see all the generated SQL produced. _(If you are working through this tutorial and want less output generated, set it to __`False`__. )_\n",
+    "- If this is set to __`True`__, we’ll see all the generated SQL produced. _(You can set it to __`False`__. )_\n",
     "\n",
     "__`create_engine()`__\n",
-    "- The return value of __`create_engine()`__ is an instance of __`Engine`__ and it represents the core interface to the database.\n",
+    "- The return value of __`create_engine()`__ is an instance of __`Engine`__ and it represents the core interface to the database. It has not actually tried to connect to the database yet; that happens only the first time it is asked to perform a task against the database.\n",
     "\n",
-    "> The `Engine`, when first returned by __`create_engine()`__, has not actually tried to connect to the database yet; that happens only the first time it is asked to perform a task against the database.\n",
+    "### Declaring a Mapping\n",
     "\n",
-    "### Declare a Mapping\n",
+    "When using the ORM, we need to describe the database tables we'll be dealing with by defining classes, which will be mapped to those tables. This usually goes into the __`models.py`__ file of your application.\n",
     "\n",
-    "- When using the ORM, we need to describe the database tables we'll be dealing with, and then by defining our own classes, which will be mapped to those tables.\n",
+    "- In this tutorial, we'll be using a system known as __`Declarative`__, which allows us to create classes that include directives to describe the actual database table they will be mapped to.\n",
     "\n",
-    "- In modern SQLAlchemy, these two tasks are usually performed together, using a system known as __`Declarative`__, which allows us to create classes that include directives to describe the actual database table they will be mapped to."
+    "- A class using __`Declarative`__ at a minimum needs a __`__tablename__`__ attribute, and at least one Column which is part of a primary key.\n",
+    "\n",
+    "- Outside of what the mapping process does to our class, the class remains otherwise mostly a normal Python class, to which we can define any number of ordinary attributes and methods needed by our application."
    ]
   },
   {
@@ -142,12 +142,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Now that we have a “base”, we can define any number of mapped classes in terms of it.\n",
+    "Now that we have a “base”, we can define any number of mapped classes in terms of it. We will start with just a single table called __`users`__, which will store records for the end-users using our application.\n",
     "\n",
-    "- We will start with just a single table called __`users`__, which will store records for the end-users using our application.\n",
-    "\n",
-    "\n",
-    "- A new class called __`User`__ will be the class to which we map this table. Within the class, we define details about the table to which we’ll be mapping, primarily the table name, and names and datatypes of columns:"
+    "A new class called __`User`__ will be the class to which we map this table. Within the class, we define details about the table to which we’ll be mapping, primarily the table name, and names and datatypes of columns:"
    ]
   },
   {
@@ -178,53 +175,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- A class using __`Declarative`__ at a minimum needs a __`__tablename__`__ attribute, and at least one Column which is part of a primary key.\n",
+    "### Creating a Schema\n",
     "\n",
+    "When we declared our class, __`Declarative`__ used a Python metaclass in order to perform additional activities once the class declaration was complete; within this phase, it then created a __`Table`__ object according to our specifications, and associated it with the class by constructing a __`Mapper`__ object.\n",
     "\n",
-    "- When our class is constructed, __`Declarative`__ replaces all the Column objects with special Python accessors known as `descriptors`; this is a process known as instrumentation. The “instrumented” mapped class will provide us with the means to refer to our table in a SQL context as well as to persist and load the values of columns from the database.\n",
+    "The Table object is a member of a larger collection known as __`MetaData`__. When using __`Declarative`__, this object is available using the __`.metadata`__ attribute of our declarative base class.\n",
     "\n",
+    "The __`MetaData`__ is a registry which includes the ability to emit a limited set of schema generation commands to the database. As our SQLite database does not actually have a users table present, we can use MetaData to issue __`CREATE TABLE`__ statements to the database for all tables that don’t yet exist. \n",
     "\n",
-    "- Outside of what the mapping process does to our class, the class remains otherwise mostly a normal Python class, to which we can define any number of ordinary attributes and methods needed by our application.\n",
-    "\n",
-    "### Declare a Schema\n",
-    "\n",
-    "With our __`User`__ class constructed via the __`Declarative`__ system, we have defined information about our table, known as table __`metadata`__.\n",
-    "\n",
-    "The object used by SQLAlchemy to represent this information for a specific table is called the Table object, and here Declarative has made one for us. We can see this object by inspecting the __`__table__`__ attribute:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "User.__table__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Intermediate_3](./images/img_user_table.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- When we declared our class, __`Declarative`__ used a Python metaclass in order to perform additional activities once the class declaration was complete; within this phase, it then created a __`Table`__ object according to our specifications, and associated it with the class by constructing a __`Mapper`__ object.\n",
-    "\n",
-    "\n",
-    "- The Table object is a member of a larger collection known as __`MetaData`__. When using __`Declarative`__, this object is available using the __`.metadata`__ attribute of our declarative base class.\n",
-    "\n",
-    "\n",
-    "- The __`MetaData`__ is a registry which includes the ability to emit a limited set of schema generation commands to the database. As our SQLite database does not actually have a users table present, we can use MetaData to issue __`CREATE TABLE`__ statements to the database for all tables that don’t yet exist. \n",
-    "\n",
-    "\n",
-    "- Below, we call the __`MetaData.create_all()`__ method, passing in our Engine as a source of database connectivity. We will see that special commands are first emitted to check for the presence of the users table, and following that the actual __`CREATE TABLE`__ statement:"
+    "We call the __`MetaData.create_all()`__ method, passing in our Engine as a source of database connectivity. We will see that special commands are first emitted to check for the presence of the users table, and following that the actual __`CREATE TABLE`__ statement. Your application doesn't need to run this all the time. This is only executed to create the required tables so this should be in a conditional statement or a separate script."
    ]
   },
   {
@@ -242,16 +201,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Intermediate_3](./images/img_meta_data.png)"
+    "![Intermediate_3](./images/img_meta_data.png)\n",
+    "\n",
+    "### Creating a Session\n",
+    "\n",
+    "We’re now ready to start talking to the database. The ORM’s “handle” to the database is the __`Session`__.\n",
+    "\n",
+    "When we first set up the application, at the same level as our __`create_engine()`__ statement, we define a __`Session`__ class which will serve as a factory for new __`Session`__ objects:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.orm import sessionmaker\n",
+    "\n",
+    "Session = sessionmaker(bind=engine)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create an Instance of the Mapped Class\n",
+    "In the case where your application does not yet have an Engine when you define your module-level objects, you can set it up later using connect it to the __`Session`__ using __`configure()`__:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Session = sessionmaker()\n",
     "\n",
-    "With mappings complete, let’s now create and inspect a __`User`__ object:"
+    "Session.configure(bind=engine)  # once engine is available"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This custom-made __`Session`__ class will create new __`Session`__ objects which are bound to our database. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "session = Session()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above __`session`__ is associated with our SQLite-enabled Engine, but it hasn’t opened any connections yet. The session is defined one time similar to how your database is defined only once in your application.\n",
+    "\n",
+    "When it’s first used, it retrieves a connection from a pool of connections maintained by the Engine, and holds onto it until we commit all changes and/or close the session object."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating an Instance of the Mapped Class\n",
+    "\n",
+    "Let’s create and inspect a __`User`__ object. In your controllers or __`views.py`__ creating objects will look like this:"
    ]
   },
   {
@@ -290,100 +315,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Intermediate_3](./images/img_ed_pw.png)"
+    "![Intermediate_3](./images/img_ed_pw.png)\n",
+    "\n",
+    "- Even though we didn’t specify it in the constructor, the id attribute still produces a value of __`None`__ when we access it."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Even though we didn’t specify it in the constructor, the id attribute still produces a value of __`None`__ when we access it.\n",
-    "\n",
-    "### Creating a Session\n",
-    "\n",
-    "- We’re now ready to start talking to the database. The ORM’s “handle” to the database is the __`Session`__. \n",
-    "\n",
-    "- When we first set up the application, at the same level as our __`create_engine()`__ statement, we define a __`Session`__ class which will serve as a factory for new __`Session`__ objects:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sqlalchemy.orm import sessionmaker\n",
-    "\n",
-    "Session = sessionmaker(bind=engine)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- In the case where your application does not yet have an Engine when you define your module-level objects, just set it up like this:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Session = sessionmaker()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Later, when you create your engine with __`create_engine()`__, connect it to the __`Session`__ using __`configure()`__:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Session.configure(bind=engine)  # once engine is available"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- This custom-made __`Session`__ class will create new __`Session`__ objects which are bound to our database. \n",
-    "\n",
-    "- Other transactional characteristics may be defined when calling __`sessionmaker`__ as well; these are described in a later chapter. Then, whenever you need to have a conversation with the database, you instantiate a __`Session`__:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "session = Session()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- The above __`Session`__ is associated with our SQLite-enabled Engine, but it hasn’t opened any connections yet. \n",
-    "\n",
-    "- When it’s first used, it retrieves a connection from a pool of connections maintained by the Engine, and holds onto it until we commit all changes and/or close the session object.\n",
-    "\n",
-    "### Adding and Updating objects\n",
+    "### Adding and Updating Objects\n",
     "\n",
     "To persist our __`User`__ object, we `add()` it to our __`Session`__:"
    ]
@@ -611,7 +552,7 @@
     "\n",
     "- In this case, the entire row was re-loaded on access because a new transaction was begun after we issued __`commit()`__. SQLAlchemy by default refreshes data from a previous transaction the first time it’s accessed within a new transaction, so that the most recent state is available.\n",
     "\n",
-    "### Rolling Back\n",
+    "### Rolling Back Changes\n",
     "\n",
     "- Since the Session works within a transaction, we can roll back changes made too. Let’s make two changes that we’ll revert; ed_user‘s user name gets set to Edwardo:"
    ]
@@ -756,7 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Querying\n",
+    "### Querying the Session\n",
     "\n",
     "- A Query object is created using the __`query()`__ method on __`Session`__.\n",
     "\n",
@@ -916,6 +857,83 @@
    "source": [
     "![Intermediate_3](./images/img_filter_ed.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "Your SQLAlchemy code may be summed up and organized like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# In your settings.py file\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "engine = create_engine('sqlite:///:memory:', echo=True)\n",
+    "\n",
+    "\n",
+    "# In your database creation script\n",
+    "Base.metadata.create_all(engine)\n",
+    "\n",
+    "\n",
+    "# In your models.py\n",
+    "from sqlalchemy import Column, Integer, String\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "\n",
+    "Base = declarative_base()\n",
+    "\n",
+    "class User(Base):\n",
+    "        __tablename__ = 'users'\n",
+    "\n",
+    "        id = Column(Integer, primary_key=True)\n",
+    "        name = Column(String)\n",
+    "        fullname = Column(String)\n",
+    "        password = Column(String)\n",
+    "\n",
+    "        def __repr__(self):\n",
+    "            return \"<User(name='%s', fullname='%s', password='%s')>\" % (\n",
+    "                self.name, self.fullname, self.password)\n",
+    "\n",
+    "\n",
+    "# In your views.py\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "\n",
+    "Session = sessionmaker(bind=engine)\n",
+    "session = Session()\n",
+    "\n",
+    "ed_user = User(name='ed', fullname='Ed Jones', password='edspassword')\n",
+    "session.add(ed_user)\n",
+    "\n",
+    "session.commit()\n",
+    "session.rollback()\n",
+    "\n",
+    "our_user = session.query(User).filter_by(name='ed').first()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 18.2 Peewee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
